# advent-of-code-2022

./: Makefile  Monkey Circles.ipynb  README.md  aoc2022.cabal  day17-bench.prof  options.txt  package.yaml
.ipynb_checkpoints/: Day 16-checkpoint.ipynb
app/: Main.hs
benchmarks/: Bench.hs
outputs/: image.txt  test.txt
python/: day_11.py
src/: D09Round2.hs  D10Round2.hs  D10Round3.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day2.hs  Day3.hs  Graphs.hs  Grids.hs  Infinites.hs  Parsing.hs  Utilities.hs  day_11.py  residues.py
src/Exploration/: ValueRecursion.hs
src/Problems/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs
src/Utilities/: Graphs.hs  Grids.hs  Infinites.hs  Parsing.hs  Patterns.hs
test/: Day11Spec.hs  Spec.hs
test/Test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day17Spec.hs  Input.hs  PatternsSpec.hs
