cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of Code 2022 Solutions
author:             filipkrunic
maintainer:         fkrunic9@gmail.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    build-depends:
        base,
        containers,
        ghc,
        megaparsec,
        monad-loops,
        random,
        text,
        transformers
    hs-source-dirs: src
    default-extensions:
        ImportQualifiedPost,
        GeneralizedNewtypeDeriving,
        RankNTypes,
        ScopedTypeVariables,
        TupleSections,
        OverloadedStrings,
        RecordWildCards
    exposed-modules:
        Graphs,
        Grids,
        Infinites,
        Parsing,
        Day01,
        Day02,
        Day03,
        Day04,
        Day05,
        Day06,
        Day07,
        Day08,
        Day09,
        Day10,
        Day11,
        Day12,
        Day13,
        Day14,
        Day15,
        Day16,
        Day17

test-suite aoc2022-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
    default-extensions:
        ImportQualifiedPost,
        OverloadedStrings 
    build-depends:
        aoc2022,
        base,
        containers,
        hspec,
        megaparsec,
        text,
        random,
        transformers
    other-modules:
        Test.Input,
        Test.Day01Spec,
        Test.Day02Spec,
        Test.Day03Spec,
        Test.Day04Spec,
        Test.Day05Spec,
        Test.Day06Spec,
        Test.Day07Spec,
        Test.Day08Spec,
        Test.Day09Spec,
        Test.Day10Spec,
        Test.Day11Spec,
        Test.Day12Spec,
        Test.Day13Spec,
        Test.Day14Spec,
        Test.Day15Spec,
        Test.Day16Spec,
        Test.Day17Spec
