cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
synopsis:           Advent of Code 2022 Solutions
author:             filipkrunic
maintainer:         fkrunic9@gmail.com
extra-source-files:
  CHANGELOG.md
  README.md

library
  build-depends:
    , arithmoi
    , base
    , containers
    , ghc
    , megaparsec
    , monad-loops
    , random
    , text
    , transformers

  hs-source-dirs:     src
  default-extensions:
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections

  exposed-modules:
    Problems.Day01
    Problems.Day02
    Problems.Day03
    Problems.Day04
    Problems.Day05
    Problems.Day06
    Problems.Day07
    Problems.Day08
    Problems.Day09
    Problems.Day10
    Problems.Day11
    Problems.Day12
    Problems.Day13
    Problems.Day14
    Problems.Day15
    Problems.Day16
    Problems.Day17
    Utilities.Graphs
    Utilities.Grids
    Utilities.Infinites
    Utilities.Parsing

executable aoc2022-test
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  build-depends:
    , aoc2022
    , base
    , containers
    , hspec
    , megaparsec
    , random
    , text
    , transformers

  other-modules:
    Test.Day01Spec
    Test.Day02Spec
    Test.Day03Spec
    Test.Day04Spec
    Test.Day05Spec
    Test.Day06Spec
    Test.Day07Spec
    Test.Day08Spec
    Test.Day09Spec
    Test.Day10Spec
    Test.Day11Spec
    Test.Day12Spec
    Test.Day13Spec
    Test.Day14Spec
    Test.Day15Spec
    Test.Day16Spec
    Test.Day17Spec
    Test.Input

executable day17-bench
  main-is:        Bench.hs
  hs-source-dirs: benchmarks
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
  ghc-options: -O2 -prof -fprof-auto -rtsopts
  build-depends:
    , aoc2022
    , base
    , criterion
  
